added definition of serious harm

--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -30,10 +30,33 @@ obligations to identify limit reference points (LRPs) for major fish stocks pres
 
 Amendments to the Canadian *Fisheries Act* (2019) include new Fish Stocks provisions that introduce legal obligations to manage stocks to promote sustainability and avoid biological limit reference points, LRPs [@dfoScienceAdvicePrecautionary2021]. The provisions also require plans to rebuild fish stocks that have declined to, or below, an LRP while taking into account the biology of the fish and environmental conditions experienced by the stock. These obligations apply to major fish stocks that are prescribed under regulations. They reinforce the previously established DFO policies to manage stocks consistent with the precautionary approach. These include [The Fishery Decision Making Framework Incorporating the Precautionary Approach](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/precaution-eng.htm) [@dfoFisheryDecisionMakingFramework2009], also known as DFO's Precautionary Approach Framework within the [Sustainable Fisheries Framework](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/overview-cadre-eng.html) and Canada's [Wild Salmon Policy](https://www.pac.dfo-mpo.gc.ca/fm-gp/salmon-saumon/wsp-pss/policy-politique-eng.html) [@dfoCanadaPolicyConservation2005].
 
-Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm is expected to occur to the stock. Serious harm can result from over-fishing, other human induced mortality, or changes in population dynamics [@dfoHarvestStrategyCompliant2006]. At this stock status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionMakingFramework2009]. Serious harm to stocks is generally described in terms of impaired productivity due to changes in recruitment, growth, maturation and survival [@dfoProceedingsNationalPeer2016a], where resulting declines are irreversible or slow to be reversed [@kronlundSelectionRoleLimit2018]. Serious harm can occur due to depensatory mortality (or Allee effects) that occur because of, for example, increased predation rates or inability to find mates at very low abundances [@chenIncorporatingAlleeEffects2002]. Serious harm can also be associated with loss of resilience [@smithTechnicalGuidelinesProvision2012] and the inability to recover from perturbations [@dfoFisheryDecisionMakingFramework2009] due to changes in stock structure or losses of phenotypic and genotypic diversity.
-Because population dynamics are not well understood at low population sizes [@dfoHarvestStrategyCompliant2006] and Allee effects are only infrequently observed in marine fish species [@keithPopulationDynamicsMarine2012]<!--[but see @chenIncorporatingAlleeEffects2002 and @cunninghamSizeSelectivityPredation2013]-->, a biological basis for serious harm is often difficult to identify and quantify. 
+Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm is expected to occur to the stock.   Definitions of serious harm within the DFO literature tend to focus on impaired productivity, although other aspects of serious harm are sometimes captured (see grey box below, adapted from Marentette et al. (In prep)^[Marentette, J.R., Barrett, T., Cogliati, K.M., Ings, D., Ladell, J., Thiess, M.  Operationalizing Serious Harm: Existing Guidance and Contemporary Canadian Practices. Can. Sci Avis. Secr. Working Paper In prep.]). 
 
-The definition of serious harm from @dfoFisheryDecisionMakingFramework2009 indicates that LRPs should be *above* the level where serious harm is expected to occur, not at the level where it is occurring, and that long-term losses of fishing opportunities may occur below that level.  Defining the level before serious harm occurs to a species or ecosystem is a pervasive challenge as harm is often not identified until it is already occurring [@hilbornQuantitativeFisheriesStock1986]. Also, this definition of serious harm includes possible impacts on other ecosystem components, which are often challenging to identify because of limited data and poor understanding of ecosystem linkages and dynamics [but see @chagarisEcologicalReferencePoints2020].
+<!--CH comment: send this grey box to Julie M. for her review 30 March-->
+\begin{tcolorbox}[sharp corners, boxrule=0.2mm]
+\subsection{Interpretations of serious harm}
+Serious harm has been interpreted as any changes to the biological properties of the stock that make growth or rebuilding to target levels cease to be considered rapid and secure\textsuperscript{1}. These changes are considered serious and difficult to reverse\textsuperscript{2,3}, and can be associated with: 
+
+\begin{itemize}
+\item	impaired productivity\textsuperscript{1-6} resulting from changes to biological processes such as recruitment, growth, maturation and survival\textsuperscript{1,4}; 
+\item	a loss of resilience\textsuperscript{5} (an impaired ability to rebuild or to recover from perturbation\textsuperscript{6});
+\item	increased risk of depensation or Allee effects\textsuperscript{4}; and/or
+\item	more generally, states where population dynamics cease to be well-understood\textsuperscript{4}.
+
+\end{itemize}
+
+At this status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities\textsuperscript{6}. 
+
+\end{tcolorbox}
+
+\footnotesize\textsuperscript{1}DFO 2016a; \textsuperscript{2}Kronlund et al. 2018; \textsuperscript{3}Shelton and Rice 2002; \textsuperscript{4}DFO 2006; \textsuperscript{5}Smith et al. 2012; \textsuperscript{6}DFO 2009a
+
+
+
+The definition of serious harm from @dfoFisheryDecisionMakingFramework2009 indicates that LRPs should be *above* the level where serious harm is expected to occur, not at the level where it is occurring, and that long-term losses of fishing opportunities may occur below that level.  Defining the level before serious harm occurs to a species or ecosystem is a pervasive challenge as harm is often not identified until it is already occurring [@hilbornQuantitativeFisheriesStock1986] and population dynamics are not well understood at low population sizes [@dfoHarvestStrategyCompliant2006; @keithPopulationDynamicsMarine2012]<!--[but see @chenIncorporatingAlleeEffects2002]-->. Also, this definition of serious harm includes possible impacts on other ecosystem components, which are often challenging to identify because of limited data and poor understanding of ecosystem linkages and dynamics [but see @chagarisEcologicalReferencePoints2020].
+ 
+ 
+<!--CH omit: Serious harm can result from over-fishing, other human induced mortality, or changes in population dynamics not related to fishing [@dfoHarvestStrategyCompliant2006].-->
  
  <!--Marentette's description of serious harm (CH included in above revised text)
  "In the context of fisheries, serious harm can be interpreted as any undesirable changes to the biological attributes of the stock that make growth to target1 levels cease to be considered rapid and secure,1 and would thus encompass stock states before extinction is a concern.2,3 These changes can be associated with:
@@ -45,7 +68,7 @@ Serious harm may be irreversible or slow to be reversed over the long-term,5 and
 The LRP is a reference point that generally represents a threshold to stock states considered at rapidly increasing risk of serious harm.1,2 Under Canada’s PA Policy, the LRP is the boundary between the Critical and Cautious zones, and the LRP also often functions as an operational control point (points at which management measures change) in harvest strategies.6,8"
  -->
 
-Pacific salmon are unique among marine fish stocks due to their high levels of intraspecific diversity which gives rise to a large range in data availability, considerations, and approaches for assessments and LRP development.  These differences necessitate guidance on LRP methods that is specific to Pacific salmon, while being consistent with the principles for LRP development across species (Marentette et al. In prep.)^[Marentette, J.R., Barrett, T., Cogliati, K.M., Ings, D., Ladell, J., Thiess, M.  Operationalizing Serious Harm: Existing Guidance and Contemporary Canadian Practices. Can. Sci Avis. Secr. Working Paper In prep.].
+Pacific salmon are unique among marine fish species due to their high levels of intraspecific diversity which gives rise to a large range in data availability, considerations, and approaches for assessments and LRP development.  These differences necessitate guidance on LRP methods that is specific to Pacific salmon, while being consistent with the principles for LRP development across species (Marentette et al. In prep.)^[Marentette, J.R., Barrett, T., Cogliati, K.M., Ings, D., Ladell, J., Thiess, M.  Operationalizing Serious Harm: Existing Guidance and Contemporary Canadian Practices. Can. Sci Avis. Secr. Working Paper In prep.].
 
 Canada's Wild Salmon Policy, WSP, represents DFO's implementation of the Precautionary Approach Framework for Pacific salmon. The goal of the WSP is to restore and maintain healthy and diverse salmon populations and their habitats for the benefit and enjoyment of the people of Canada in perpetuity [@dfoCanadaPolicyConservation2005]. One objective of the WSP is to safeguard the genetic diversity of wild Pacific salmon by maintaining and protecting Conservation Units (CUs), where a CU is defined as a "group of wild salmon sufficiently isolated from other groups that, if extirpated is very unlikely to recolonize naturally within an acceptable time frame, such as a human lifetime or a specified number of salmon generations" (DFO 2005). 
 
