revised definition of SMU

--- a/guidelinesWP/01.5-reviewRPs.Rmd
+++ b/guidelinesWP/01.5-reviewRPs.Rmd
@@ -29,7 +29,7 @@ The composite or multidimensional approach for assessing status, sometimes calle
 
 CH; added "when metrics capture processes at a variety of scales". Admittedly, it's more the type of metrics, e.g., using ppns of biological units above critical threshold instead of total BM, instead of the number of metrics that's most important.  However, these alternative metrics tend to be common in multidimenstional assessments.-->
 
-Methods for estimating reference points for Pacific salmon are diverse, often taking advantage of its semelparous and anadromous life-history and limits on capacity in freshwater, and other population characteristics [@portleyLimitReferencePoints2014; @chaputConsiderationsDefiningReference2012]. Under Canada's WSP, status assessments integrate data across numerous indicators or metrics representing different population characteristics, including current spawner abundances, short and long-term trends in abundances, distribution of spawning, and fishing mortality relative to population productivity [@holtIndicatorsStatusBenchmarks2009]. Benchmarks are established for each metric and an overall multidimensional estimate of CU status is obtained by integrating status among metrics [@grantIntegratedBiologicalStatus2013; @grant2017FraserSockeye2020; @dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016].  An advantage of this approach is that CUs missing data for any single metric can still be evaluated against remaining metrics, making the framework applicable across a relatively broad range of data types and hence CUs. Expert-driven processes to integrate often conflicting metrics within the multidimensional framework have been implemented for numerous Pacific salmon stocks*\textcolor{cyan}{LW: should this remain as 'stock'?}* in Canada, such as Fraser River Sockeye Salmon, *Oncorhynchus nerka* [@grantEvaluationUncertaintyFraser2011; @grantIntegratedBiologicalStatus2013; @grant2017FraserSockeye2020], Interior Fraser River Coho Salmon, *O. kisutch* [@dfoWildSalmonPolicy2015], and Southern BC Chinook Salmon, *O. tshawytscha* [@dfoIntegratedBiologicalStatus2016]. However, these expert-driven processes can be challenging to implement on a broad and timely basis due to the high demand they place on time and staff resources. Based on the consistencies that emerged from assessments where the integration of multiple metrics has been applied, Pestal et al. (In prep.) developed an algorithm to approximate overall WSP status by combining those metrics in a decision tree, at the scale of CUs. This algorithm was incorporated into DFO's Pacific Salmon Status Scanner and then verified by local assessment experts and tested with 'out-of-sample' CUs not included in the original formulation (Pestal et al. In prep.). 
+Methods for estimating reference points for Pacific salmon are diverse, often taking advantage of its semelparous and anadromous life-history and limits on capacity in freshwater, and other population characteristics [@portleyLimitReferencePoints2014; @chaputConsiderationsDefiningReference2012]. Under Canada's WSP, status assessments integrate data across numerous indicators or metrics representing different population characteristics, including current spawner abundances, short and long-term trends in abundances, distribution of spawning, and fishing mortality relative to population productivity [@holtIndicatorsStatusBenchmarks2009]. Benchmarks are established for each metric and an overall multidimensional estimate of CU status is obtained by integrating status among metrics [@grantIntegratedBiologicalStatus2013; @grant2017FraserSockeye2020; @dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016].  An advantage of this approach is that CUs missing data for any single metric can still be evaluated against remaining metrics, making the framework applicable across a relatively broad range of data types and hence CUs. Expert-driven processes to integrate often conflicting metrics within the multidimensional framework have been implemented for numerous Pacific salmon CUs in Canada, such as Fraser River Sockeye Salmon [@grantEvaluationUncertaintyFraser2011; @grantIntegratedBiologicalStatus2013; @grant2017FraserSockeye2020], Interior Fraser River Coho Salmon, *OOncorhynchus kisutch* [@dfoWildSalmonPolicy2015], and Southern BC Chinook Salmon, *O. tshawytscha* [@dfoIntegratedBiologicalStatus2016]. However, these expert-driven processes can be challenging to implement on a broad and timely basis due to the high demand they place on time and staff resources. Based on the consistencies that emerged from assessments where the integration of multiple metrics has been applied, Pestal et al. (In prep.) developed an algorithm to approximate overall WSP status by combining those metrics in a decision tree, at the scale of CUs. This algorithm was incorporated into DFO's Pacific Salmon Status Scanner and then verified by local assessment experts and tested with 'out-of-sample' CUs not included in the original formulation (Pestal et al. In prep.). 
 
 
 In some cases, single-metric approaches in which spawner abundances are compared with an abundance-based benchmark have been used as proxies for WSP status both by organizations external to DFO [@pacificsalmonfoundationMethodsAssessingStatus2020; @pacificsalmoncommissionChapterPerformanceEvaluation2016]  and occasionally within DFO [e.g., Barkley Sockeye Salmon, @chaputConsiderationsDefiningReference2012]. One recommended lower benchmark on spawning abundances under Canada's WSP is S~gen~, the abundance resulting in recovery to S~MSY~ in one salmon generation under equilibrium conditions [@holtEvaluationBenchmarksConservation2009]. Benchmarks on spawner abundances for data-limited contexts have also been identified in recognition that the data required to estimate spawner-recruitment based benchmarks are often not available [@parkenHabitatbasedMethodsEstimate2006, Section \@ref(cu-est-methods)]. Biological benchmarks under the WSP are distinguished from triggers in harvest control rules that incorporate additional socioeconomic considerations beyond biological considerations [@holtDistinguishingBenchmarksBiological2013a].
