--- a/guidelinesWP/06-chap6.Rmd
+++ b/guidelinesWP/06-chap6.Rmd
@@ -11,8 +11,8 @@
 \item estimation uncertainty in benchmarks arising from statistical model fitting and time-varying parameters, and
 \item structural uncertainties in model forms.
 \end{itemize}
-\item Uncertainties can also arise in  \textbf{CU statuses}  due to the choice of metrics used (single or multidimensional) and their spatial scale (CU or finer, sub-populations). For both aggregate abundance LRPs, uncertainties can arise because CU-level status is based on only a single metric as a proxy for status on multiple dimensions. 
-\item The distribution of spawning among sub-populations within a CU can be important for the viability of the CU and SMU, and ignoring or misidentifying this stock structure may increase uncertainty in assessed status.
+\item Uncertainties can also arise in \textbf{CU statuses} due to the choice of metrics used (single or multidimensional). For both aggregate abundance LRPs, uncertainties can arise because CU-level status is based on only a single metric as a proxy for status on multiple dimensions. 
+\item The distribution of spawning among populations within a CU can be important for the viability of the CU and SMU, and ignoring or misidentifying this stock structure may increase uncertainty in assessed status.
 \item Uncertainties in all the candidate LRPs can arise from the exclusion of data-limited CUs from analyses when these CUs are poorly represented by the data-rich CUs that are included. We recommend caution when applying provisional LRPs that do not include all CUs.
 \item Uncertainties in \textbf{logistic regression LRPs} arise from statistical estimation of the stock-recruitment and logistic regression models, as well as changes in population parameters and covariance among CUs over time.
 \item Uncertainties in \textbf{projection LRPs} can arise from mis-specifying models used in the projections.
@@ -43,7 +43,7 @@ Third, structural uncertainty in stock-recruitment models underlying benchmark e
 CH: not it's not, but have used 95%CIS to apprpoximate credible intervals for now...
 -->
 
-In addition to uncertainties in benchmarks, uncertainties can arise in estimated CU statuses due to assumptions made during status assessment. Uncertainty in status can result from the choice of metrics used (single or multidimensional) and their spatial scale (CU or finer, sub-populations). In some cases, status is best represented by a composite of multiple metrics resulting in uncertainties in status when only a single metric (e.g., spawner abundances) is applied. Furthermore, the distribution of spawning among sub-populations within a CU can be important for the viability of the aggregate, and ignoring or misidentifying this stock structure may result in higher uncertainty in assessed status. Uncertainties can also arise from applying stock-recruitment based benchmarks to spatial scales that are larger or smaller than the scale at which density dependence occurs. 
+In addition to uncertainties in benchmarks, uncertainties can arise in estimated CU statuses due to assumptions made during status assessment. Uncertainty in status can result from the choice of metrics used (single or multidimensional). In some cases, status is best represented by a composite of multiple metrics resulting in uncertainties in status when only a single metric (e.g., spawner abundances) is applied. Furthermore, the distribution of spawning among populations within a CU can be important for the viability of the aggregate, and ignoring or misidentifying this stock structure may result in higher uncertainty in assessed status. Uncertainties can also arise from applying stock-recruitment based benchmarks to spatial scales that are larger or smaller than the scale at which density dependence occurs. 
 
 
 Uncertainties in peer-reviewed WSP assessments are captured qualitatively documented in narratives associated with each CU assessment [e.g., @dfoWildSalmonPolicy2015]. These qualitative estimates of uncertainty are derived from experts who integrate uncertainties in data and benchmarks and often reconcile conflicting metrics. This process requires careful consideration of expertise included to ensure that best available information is incorporated in assessments and associated description of uncertainties.  Although uncertainties in CU status derived from the Salmon Scanner are not currently provided, this functionality is being considered for future iterations of the tool. The Salmon Scanner will be applied annually within an expert-driven process led by DFO's State of the Salmon Program, so underlying uncertainties are considered and outputs are verified. A full review of the Salmon Scanner including uncertainties is forthcoming (Pestal et al. in prep).<!--CH comment: There are many uncertainties associated with this tool, but I'm not sure that it's useful for us to include them here as it will invite discussion on topics that are outside scope. Example uncertainties are that the Tool does not include distributional metrics or productivity which may be important in formal WSP assessments, and the Tool was parameterized based on a set of southern stocks so does not necessarily represent the entire range.-->
